--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <div class="container">
             <h1>Catchy Trivia Name</h1>
             <br>
-            <h4 id="timer"><button>Start</button></h4>
-            <h4 class="question"></h4>
-            <ul>
-                <l1 class="firstChoice"></l1>
-                <l1 class="secondChoice"></l1>
-                <l1 class="thirdChoice"></l1>
-                <l1 class="fourthChoice"></l1>
+            <h4 id="timer"></h4>
+            <h4 id="start"><button>Start</button></h4>
+            <h4 id="question"></h4>
+            <ul id="choices">
+                <l1 id="firstChoice"></l1>
+                <l1 id="secondChoice"></l1>
+                <l1 id="thirdChoice"></l1>
+                <l1 id="fourthChoice"></l1>
             </ul>
         </div>
 
