--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,22 +9,25 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
 
 </head>
+
 <body>
-        <div class="container">
-            <h1>Catchy Trivia Name</h1>
-            <br>
-            <h4 id="timer"></h4>
-            <h4 id="start"><button>Start</button></h4>
-            <h4 id="question"></h4>
-            <ul id="choices">
-                <l1 id="firstChoice"></l1>
-                <l1 id="secondChoice"></l1>
-                <l1 id="thirdChoice"></l1>
-                <l1 id="fourthChoice"></l1>
-            </ul>
-        </div>
+
+    <h1>Catchy Trivia Name</h1>
+    <br>
+    <h4 id="timer"></h4>
+    <h4 id="start"><button>Start</button></h4>
+    <h4 id="question"></h4>
+    <h8 id="scoreCounter"></h8>
+    <div id="buttonContainer">
+        <div id="image"></div>
+        <input type="button" class="guessButton" id="firstChoice" value="test">
+        <input type="button" class="guessButton" id="secondChoice" value="test">
+        <input type="button" class="guessButton" id="thirdChoice" value="test">
+        <input type="button" class="guessButton" id="fourthChoice" value="test">
+    </div>
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="assets/javascript/main.js"></script>
+
 </html>
